syntax = "proto3";

package pb;

option go_package = "final-design/pb";

service UserService {
  rpc Check(UserRequest) returns (UserResponse) {}
  rpc AdminCheck(UserRequest) returns (UserResponse) {}
  rpc Create(CreateUserRequest) returns (CreateUserResponse) {}
}

message UserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  bool result = 1;
  int64 userId = 2;
  string err = 3;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  int64 userId = 3;
  int32 age = 4;
}

message CreateUserResponse {
  bool result = 1;
  string err = 2;
}

// protoc -I=. --go-grpc_out=. --go-grpc_opt=paths=source_relative user.proto
// protoc -I=. --go_out=. --go_opt=paths=source_relative user.proto